# CSV-MCP

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.toml  pyproject.toml
csv_mcp/: __main__.py  config.py  engine.py  resources.py  server.py  watcher.py
csv_mcp/tools/: read.py  write.py
data/csvs/: studio_albums_tracks.csv
tests/: conftest.py  test_engine.py  test_read_tools.py  test_resources.py  test_write_tools.py
